--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="responsive">
             <div class="gallery">
               <a target="_blank" href="bluza_spodenki.jpg">
-                <img src="bluza_spodenki.jpg" alt="Cinque Terre">
+                <img src="bluza_spodenki.jpg" alt="czarna bluza i spodenki">
               </a>
             </div>
           </div>
@@ -46,7 +46,7 @@
           <div class="responsive">
             <div class="gallery">
               <a target="_blank" href="koszulka.jpg">
-                <img src="koszulka.jpg" alt="Forest">
+                <img src="koszulka.jpg" alt="czarna koszulka z kołnierzykiem">
               </a>
             </div>
           </div>
@@ -54,7 +54,7 @@
           <div class="responsive">
             <div class="gallery">
               <a target="_blank" href="mundurek.jpg">
-                <img src="mundurek.jpg" alt="Northern Lights">
+                <img src="mundurek.jpg" alt="mundurek amerkykański">
               </a>
             </div>
           </div>
@@ -62,7 +62,7 @@
           <div class="responsive">
             <div class="gallery">
               <a target="_blank" href="bluza.jpg">
-                <img src="bluza.jpg" alt="Mountains">
+                <img src="bluza.jpg" alt="szara bluza">
               </a>
             </div>
           </div>
